--- a/style.css
+++ b/style.css
@@ -11,43 +11,55 @@ body {
 }
 
 .navbar {
-  width: 100%;                 /* full width */
-  height: 192px;               /* ~2 inches */
-  background-color: #101B30;
   display: flex;
-  justify-content: space-between;
-  align-items: left;
-  padding: 0 40px;
+  padding: 10px 40px;
+  margin: 0 auto;
   position: fixed;
   top: 0;
   left: 0;
+  right: 0;
+  width: 95%;                 /* ~full width */
+  height: 192px;               /* ~2 inches */
+  border-radius: 30px;        /* Rounded corners /*
+  background-color: #101B30;
+  justify-content: space-between;
+  align-items: left;
 }
 
 .logo {
-  color: #fff;
-  font-size: 20px;
+        width: 12rem;
+      }
+
+.menu {
+  display: flex;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.item {
+  margin: 0 15px;
+}
+
+.item a {
+  text-decoration: none;
+  color: #333;
   font-weight: bold;
 }
 
-/* Nav list */
-.nav-links {
-  list-style: none;
-  display: flex;               /* horizontal layout */
-  gap: 20px;
+.item a:hover {
+  color: #2258c3;
 }
 
-/* Buttons */
-.nav-links a {
-  display: inline-block;
-  padding: 15px 25px;
-  background-color: #444;
+button {
+  background-color: #2258c3;
   color: white;
-  text-decoration: none;
-  font-size: 18px;
-  border-radius: 6px;
-  transition: background-color 0.3s ease;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 20px;
+  cursor: pointer;
 }
 
-.nav-links a:hover {
-  background-color: #00bcd4;
+button:hover {
+  background-color: #fd2df3;
 }
