--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,9 @@
 body {
   font-family: Arial, sans-serif;
   padding-top: 200px;
-  background-color: #101B30;
+  background-color: #1D2634;
 }
 
-/* NAVBAR */
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -21,29 +20,21 @@ body {
   left: 0;
   right: 0;
 
-  width: 95%;
+  width: 100%;
   height: 192px;
 
   margin: 0 auto;
   padding: 10px 40px;
 
   background-color: #1D2634;
-  border-radius: 30px;
-}
-
-.logo {
-  width: 12rem;
-  color: white;
-  font-size: 24px;
-  font-weight: bold;
+  border-radius: 0px;
 }
 
 .logo img {
-  height: 50px;   /* smaller logo */
+  height: 125px;   /* smaller logo */
   width: auto;    /* keeps proportions */
 }
 
-/* NAV LINKS */
 .nav-links {
   display: flex;
   list-style: none;
@@ -65,7 +56,7 @@ body {
 
 .sidebar {
   width: 250px;                  /* adjust width */
-  background-color: #101B30;     /* dark blue */
+  background-color: #FFF;        /* dark blue */
   color: white;
   padding: 20px;
   height: 100vh;                 /* full height */
