--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ body {
   left: 50%;
   width: 0%;
   height: 3px;
-  background: #fd2df3;
+  background: #B3966B;
   transition: width 0.3s ease, left 0.3s ease;
 }
 
