--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
   height: 200px;
 
   background-color: #1D2634;
-  border-bottom: 3px solid #2258c3
+  border-bottom: 3px solid #2258c3;
 }
 
 .logo img {
