--- a/styles.css
+++ b/styles.css
@@ -29,8 +29,7 @@ main {
   width: 100%;
   height: 200px;
 
-  background-color: #1D2634;
-  border-bottom: 3px solid #B3966B;
+  background-color: #EFF6FF;
 }
 
 .logo img {
