--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ main p {
 .folder {
   width: 100%;
   height: 950px;
-  background: #fdd835; /* folder yellow */
+  background: #1D2634; /* dark blue */
   border-radius: 4px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.2);
   overflow: hidden;
