--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,8 @@ body {
 }
 
 .simple-polished-frame {
-  width: 100%;
+  padding-top: 55px;
+  width: 95%;
   height: 900px;
   border: 1px solid #ddd;
   border-radius: 8px;
@@ -100,20 +101,21 @@ main p {
 }
 
 .folder {
+  padding-top: 25px;
   width: 100%;
   height: 950px;
   background: #1D2634; /* dark blue */
   border-radius: 4px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.2);
   overflow: hidden;
-  position: relative;
+  position: absolute;
   font-family: sans-serif;
 }
 
 .tab {
   width: 80px;      /* width of the tab */
   height: 30px;     /* height of the tab */
-  background: #fbc02d; /* slightly darker yellow */
+  background: #1D2634; /* dark blue */
   position: absolute;
   top: -30px;
   left: 20px;       /* distance from left edge */
